# quafios

./: .directory  .gitignore  AUTHORS  BUGS  CREDITS  ChangeLog  FAQ  INSTALL  MANIFEST  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  TODO  autogen.sh  bochs.conf  configure  configure.ac  configure.scan  generic.am  maketar
autoconf/: general.m4
boot/: .goutputstream-R2MF1W  Makefile.am  Makefile.in  a20.c  bootinfo.c  cdboot.s  config.h  console.c  cpu.c  diskfs.c  gunzip.c  iso9660.c  loader.ld  main.c  menu.c  printf.c  realtest.ld  realtest.s
boot/common/: console.c  cpu.c
boot/diskboot/: README  mbr.s  vbr.s
boot/isolive/: README  chainloader.c  eltorito.s  gunzip.c  iso9660.c  isolive.ld  main.c
boot/loader/: README  bootdisk.c  bootinfo.c  diskfs.c  fs.c  main.c  menu.c  vesa.c
boot/multiboot/: README  multiboot.s
calc/: Makefile.am  Makefile.in  boolean.h  eval.c  fix.c  linkedlist.c  linkedlist.h  main.c  parse.c  prototype.h  solv.c  stack.c  stack.h  token.h
coreutils/: Makefile.am  Makefile.in  cat.c  cp.c  dir.c  free  link.c  ls.c  lsdev  mkdir.c  mknod.c  mount.c  readsect  readsect.c  reboot.c  rm.c  rmdir.c  umount.c  unlink.c
cpanel/: Makefile.am  Makefile.in  README  main.c
edit/: Makefile.am  Makefile.in  README  command.c  console.c  edit.c  file.c  main.c  view.c
format/: Makefile.am  Makefile.in  format.c
fractals/: tmp
gui/: Makefile.am  Makefile.in  alex.c  bmp.c  iconview.c  inflate.c  pixbuf.c  png.c  prototype.c  window.c  winmanif.c
gui/include/: gui.h
gui/include/gui/: bmp.h  iconview.h  inflate.h  pixbuf.h  png.h  window.h  winmanif.h
init/: Makefile.am  Makefile.in  init
kernel/: .directory  Makefile.am  Makefile.in  config.h  main.c
kernel/arch/: exception.c  init.c  irq.c  page.c  panic.c  proc.c  protect.c  spinlock.c  stack.c  svc.c
kernel/core/: idle.c  printk.c  syscall.c
kernel/drivers/: device.c  resource.c
kernel/drivers/ata/: ahci.c  atadisk.c  ide.c
kernel/drivers/genesis/: root.c
kernel/drivers/isa/: isa.c  pci_isa.c
kernel/drivers/keyboard/: ps2.c
kernel/drivers/machine/: ibmpc.c
kernel/drivers/mem/: mem.c  ramdisk.c
kernel/drivers/mouse/: ps2.c
kernel/drivers/partition/: partition.c  partprobe.c
kernel/drivers/pci/: pci.c
kernel/drivers/pic/: 8259A.c
kernel/drivers/rtc/old/: rtc.cpp
kernel/drivers/scsi/: scsidisk.c
kernel/drivers/serio/: 8042kbc.c
kernel/drivers/storage/: bootdisk.c  disk.c  mbr.c  partition.c  partprobe.c
kernel/drivers/timer/: 8253.c
kernel/drivers/tty/: pstty.c  vtty.c
kernel/drivers/usb/: core.c  ehci.c  hub.c  mass.c  uhci.c
kernel/drivers/video/: vga.c
kernel/fonts/: font10x24.fon  fontinc.c
kernel/fs/: devfs.c  diskfs.c  exec.c  fcntl.c  init.c  inode.c  ioctl.c  namei.c  open.c  read_write.c  readdir.c  stat.c  super.c  sysfs.c  tmpfs.c
kernel/include/arch/: cache.h  irq.h  page.h  spinlock.h  stack.h  type.h
kernel/include/ata/: ide.h
kernel/include/fs/: diskfs.h  tmpfs.h
kernel/include/i386/: asm.h  cache.h  page.h  protect.h  spinlock.h  stack.h  type.h
kernel/include/keyboard/: generic.h
kernel/include/lib/: linkedlist.h  string.h
kernel/include/mem/: mem.h  ramdisk.h
kernel/include/mouse/: generic.h
kernel/include/pci/: pci.h
kernel/include/pic/: 8259A.h
kernel/include/scsi/: scsi.h
kernel/include/serio/: 8042kbc.h
kernel/include/std/: elf.h
kernel/include/storage/: disk.h
kernel/include/sys/: bootinfo.h  class.h  device.h  error.h  fs.h  ipc.h  mm.h  printk.h  proc.h  resource.h  scheduler.h  semaphore.h  syscall.h
kernel/include/timer/: 8253.h  generic.h
kernel/include/tty/: pstty.h  vtty.h
kernel/include/usb/: core.h  hub.h
kernel/include/video/: generic.h
kernel/init/: init.c  splash.c
kernel/klib/: linkedlist.c  string.c
kernel/ld/: arch32.ld
kernel/mm/: init.c  kmem.c  pmem.c  umem.c
kernel/proc/: exit.c  fork.c  init.c  ipc.c  list.c  scheduler.c  semaphore.c  signal.c  synctest.c  wait.c
launcher/: Makefile.am  Makefile.in  README  main.c
media/: Makefile.am  Makefile.in
media/fonts/: font6x12.fon  link
media/home/: DISCLAIMER  README
pascal/: Makefile.am  Makefile.in  main.c
qash/: Makefile.am  Makefile.in  func.c  func.h  interpret.h  main.c
qlibc/: Makefile.am  Makefile.in
qlibc/api/: README  fs.c  mman.c  proc.c  sys.c  syscall.c
qlibc/ctype/: class.c
qlibc/entry/: _start.c
qlibc/errorno/: errno.c
qlibc/include/: ctype.h  errno.h  stdarg.h  stdio.h  stdlib.h  string.h
qlibc/include/api/: fs.h  mman.h  proc.h  sys.h  syscall.h
qlibc/stdio/: access.c  char.c  direct.c  error.c  format.c  op.c  pos.c  streams.c
qlibc/stdlib/: env.c  malloc.c  strto.c
qlibc/string/: string.c
qonqueror/: Makefile.am  Makefile.in  README  main.c
qonsole/: Makefile.am  Makefile.in  README  main.c  qonosole.map
quackier/: README
quafshot/: Makefile.am  Makefile.in  README  main.c
rash/: Makefile.am  Makefile.in  README  config.h  history.c  internal.c  log.c  main.c  proccmd.c  quafios.c  rash.h  readcmd.c  token.c  unix.c
scripts/: bochs.conf  hvm_domu_quafios.cfg  maketar  qemu.sh  setup.sh  xen.sh
shell/: Makefile.am  Makefile.in  README  func.c  func.h  interpret.c  interpret.h  io.c  io.h  main.c  sh
tools/: Makefile.am  Makefile.in  mkdiskfs.c
udev/: Makefile.am  Makefile.in  main.c
winman/: .directory  Makefile.am  Makefile.in  inbox.c  keyboard.c  main.c  mouse.c  osm.c  vga.c  wallpaper.c  winman.h  winpool.c
