
AC_INIT([Quafios],[1.0.2],[],[quafios],[http://www.quafios.com/])

PACKAGE=Quafios
VERSION=1.0.2

AC_PROG_CXX

AM_INIT_AUTOMAKE
AC_CONFIG_FILES(Makefile
                kernel/Makefile
                boot/Makefile
                qlibc/Makefile
                init/Makefile
                udev/Makefile
                shell/Makefile
                rash/Makefile
                coreutils/Makefile
                calc/Makefile
                edit/Makefile
                media/Makefile
                gui/Makefile
                winman/Makefile
                qonqueror/Makefile
                qonsole/Makefile
                cpanel/Makefile
                quafshot/Makefile
                launcher/Makefile
                pascal/Makefile
                format/Makefile)
AC_OUTPUT
