
AC_INIT([Quafios],[2.0.1],[],[quafios],[http://www.quafios.com/])

PACKAGE=Quafios
VERSION=2.0.1

AC_PROG_CXX

AM_INIT_AUTOMAKE
AC_CONFIG_FILES(Makefile
                kernel/Makefile
                boot/Makefile
                qlibc/Makefile
                init/Makefile
                rash/Makefile
                shell/Makefile
                coreutils/Makefile
                calc/Makefile
                edit/Makefile
                media/Makefile
                gui/Makefile
                winman/Makefile
                qonqueror/Makefile
                qonsole/Makefile
                cpanel/Makefile
                quafshot/Makefile
                launcher/Makefile
                pascal/Makefile
                tools/Makefile)
AC_OUTPUT
